Proposed fix for preventing 'whiteout' visibility issues in light mode (#1824)

--- a/src/theme/Screenshot/styles.module.css
+++ b/src/theme/Screenshot/styles.module.css
@@ -3,6 +3,14 @@
   background-color: var(--theme-screenshot-background-color);
 }
 
+.forceDark {
+  background-color: var(--palette-charade);
+}
+
+.forceLight {
+  background-color: white;
+}
+
 .shadow {
   box-shadow: var(--image-shadow);
 }
